# xmr-stak-amd

./: .gitignore  CMakeLists.txt  README.md  cli-miner.cpp  config.txt  console.cpp  executor.cpp  executor.h  jconf.cpp  jconf.h  jpsock.cpp  jpsock.h  minethd.cpp  minethd.h  msgstruct.h  version.h  webdesign.cpp  xmr-stak-amd.cbp
amd_gpu/: gpu.c  gpu.h
crypto/: cryptonight_common.cpp
opencl/: cryptonight.cl
